--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "my-app",
+  "name": "photobowser",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-infinite-scroller": "^1.2.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1"
   },
   "scripts": {
